# python_template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
beings/: __init__.py  person.py
people/: __init__.py  person.py
tests/: test_person.py
